[gd_scene load_steps=22 format=3 uid="uid://d0aw7hwef7tyj"]

[ext_resource type="Texture2D" uid="uid://btqf2damnecck" path="res://common/background.png" id="1"]
[ext_resource type="PackedScene" uid="uid://dqx3p8jtaixrm" path="res://main/demo_list.tscn" id="2"]
[ext_resource type="Script" path="res://main/demo_picker_ui.gd" id="3"]
[ext_resource type="Theme" uid="uid://cjj058exws11l" path="res://common/ui/ui_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://bjschaj33iqmy" path="res://common/ui/9patch_searchbar.png" id="5"]
[ext_resource type="Texture2D" uid="uid://buig73o7oruq1" path="res://common/ui/9patch_mainmenu.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bykcpsiqly1mt" path="res://common/planet.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b5aictkwbag1h" path="res://assets/app-title.svg" id="8"]
[ext_resource type="PackedScene" path="res://main/gd_quest_logo.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://c7u8dynipstl8" path="res://common/planet_large.png" id="10"]
[ext_resource type="Texture2D" uid="uid://nej51duwmg57" path="res://demos/icons/node_3d.svg" id="12"]
[ext_resource type="Texture2D" uid="uid://dyc6vi6xfleew" path="res://demos/icons/node_2d.svg" id="13"]
[ext_resource type="Texture2D" uid="uid://cgc2qdu3pski8" path="res://demos/icons/node_all_selected.svg" id="14"]
[ext_resource type="PackedScene" uid="uid://bvuvs6y41h1ip" path="res://main/ui_controls_list.tscn" id="17"]

[sub_resource type="StyleBoxFlat" id="2"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxTexture" id="4"]
content_margin_right = 24.0
content_margin_bottom = 24.0
texture = ExtResource("5")
texture_margin_left = 48.0
texture_margin_top = 48.0
texture_margin_right = 48.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 128, 128)

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="Shortcut" id="8"]

[node name="DemoPickerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")
script = ExtResource("3")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1024, 600)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 2

[node name="planet" type="Sprite2D" parent="TextureRect"]
position = Vector2(1719.03, 225.17)
texture = ExtResource("7")

[node name="planet2" type="Sprite2D" parent="TextureRect"]
position = Vector2(39.3873, 1036.48)
scale = Vector2(1.09002, 1.09002)
texture = ExtResource("10")

[node name="FilterButtons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1325.64
offset_top = 499.122
offset_right = 1556.64
offset_bottom = 800.122
alignment = 1

[node name="All" type="Button" parent="FilterButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.596078, 0.639216, 0.839216, 1)
theme_override_colors/font_color = Color(0.831373, 0.847059, 0.92549, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/disabled = SubResource("1")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("1")
theme_override_styles/normal = SubResource("1")
toggle_mode = true
text = "ALL"
icon = ExtResource("14")
flat = true
expand_icon = true

[node name="2D" type="Button" parent="FilterButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.596078, 0.639216, 0.839216, 1)
theme_override_colors/font_color = Color(0.831373, 0.847059, 0.92549, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/disabled = SubResource("1")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("1")
theme_override_styles/normal = SubResource("1")
toggle_mode = true
text = "2D"
icon = ExtResource("13")
flat = true
expand_icon = true

[node name="3D" type="Button" parent="FilterButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.596078, 0.639216, 0.839216, 1)
theme_override_colors/font_color = Color(0.831373, 0.847059, 0.92549, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/disabled = SubResource("1")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("1")
theme_override_styles/normal = SubResource("1")
toggle_mode = true
text = "3D"
icon = ExtResource("12")
flat = true
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(682, 0)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -440.0
offset_right = 341.0
offset_bottom = 434.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="title" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath(".")
focus_next = NodePath("../../NinePatchRect/MarginContainer/DemoList")
focus_previous = NodePath("../../../HBoxContainer/HelpButton")
theme_override_styles/focus = SubResource("3")
theme_override_styles/normal = SubResource("4")

[node name="SearchLabel" type="Label" parent="VBoxContainer/HBoxContainer/SearchBar"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_right = -49.0
text = "Search"
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6")
patch_margin_left = 16
patch_margin_top = 32
patch_margin_right = 16
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/NinePatchRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 27

[node name="DemoList" parent="VBoxContainer/NinePatchRect/MarginContainer" instance=ExtResource("2")]
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../../LoadButton")
focus_previous = NodePath("../../../HBoxContainer/SearchBar")

[node name="LoadButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 13
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
text = "LOAD SCENE"

[node name="GDQuestLogo" parent="." instance=ExtResource("9")]
layout_mode = 1
anchors_preset = 3
offset_left = -292.0
offset_top = -106.0
offset_right = -38.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 184.0
offset_bottom = 64.0

[node name="QuitButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 13
theme_override_colors/font_disabled_color = Color(0.439216, 0.482353, 0.662745, 1)
theme_override_colors/font_hover_color = Color(0.643137, 0.682353, 0.85098, 1)
theme_override_colors/font_pressed_color = Color(0.337255, 0.376471, 0.568627, 1)
theme_override_colors/font_color = Color(0.439216, 0.482353, 0.662745, 1)
theme_override_styles/focus = SubResource("5")
theme_override_styles/disabled = SubResource("5")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("5")
theme_override_styles/normal = SubResource("6")
text = "QUIT"
flat = true

[node name="HelpButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 13
focus_next = NodePath("../../VBoxContainer/HBoxContainer/SearchBar")
focus_previous = NodePath("../QuitButton")
theme_override_colors/font_disabled_color = Color(0.439216, 0.482353, 0.662745, 1)
theme_override_colors/font_hover_color = Color(0.643137, 0.682353, 0.85098, 1)
theme_override_colors/font_pressed_color = Color(0.337255, 0.376471, 0.568627, 1)
theme_override_colors/font_color = Color(0.439216, 0.482353, 0.662745, 1)
theme_override_styles/focus = SubResource("5")
theme_override_styles/disabled = SubResource("5")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("5")
theme_override_styles/normal = SubResource("6")
shortcut = SubResource("8")
shortcut_in_tooltip = false
text = "HELP"
flat = true

[node name="HelpWindow" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0980392, 0.0784314, 0.141176, 0.701961)

[node name="CenterContainer" type="CenterContainer" parent="HelpWindow"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="UIControlsList" parent="HelpWindow/CenterContainer" instance=ExtResource("17")]
layout_mode = 2
is_foldable = false
title = "Demo controls"
controls = ["ui_up", "ui_down", "reset_screen", "go_back_to_menu", "toggle_debug", "go_to_next_screen", "go_to_previous_screen", "toggle_interface"]

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/SearchBar" to="." method="_on_LineEdit_text_changed"]
